@@ -2,6 +2,8 @@ Revision history for OpenTelemetry-SDK
 
 {{$NEXT}}
 
+    * Add initial support for programmatic configuration
+
 0.027     2025-05-08 08:50:57 BST
 
     * Switch to the internal logger added to OpenTelemetry v0.030.
